--- a/Project_Flight/DLL_DAL/DLL_DAL.csproj
+++ b/Project_Flight/DLL_DAL/DLL_DAL.csproj
@@ -48,10 +48,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="async.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="Model\SanBayModel.cs" />
+    <Compile Include="Model\TuyenBayModel.cs" />
     <Compile Include="Model\UserModel.cs" />
     <Compile Include="NhanVienDLL_DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SanBayDLL_DAL.cs" />
+    <Compile Include="TuyenBayDLL_DAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
