--- a/Project_Flight/DLL_DAL/DLL_DAL.csproj
+++ b/Project_Flight/DLL_DAL/DLL_DAL.csproj
@@ -48,13 +48,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractDLL_DAL.cs" />
-    <Compile Include="async.cs" />
     <Compile Include="ChuyenBayDLL_DAL.cs" />
+    <Compile Include="MayBayDLL_DAL.cs" />
     <Compile Include="Model\ChuyenBayModel.cs" />
+    <Compile Include="Model\MayBayModel.cs" />
+    <Compile Include="Model\PhieuDatVeModel.cs" />
     <Compile Include="Model\SanBayModel.cs" />
     <Compile Include="Model\TuyenBayModel.cs" />
     <Compile Include="Model\NhanVienModel.cs" />
     <Compile Include="NhanVienDLL_DAL.cs" />
+    <Compile Include="PhieuDatVeDLL_DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SanBayDLL_DAL.cs" />
     <Compile Include="TuyenBayDLL_DAL.cs" />
