--- a/Project_Flight/DLL_DAL/DLL_DAL.csproj
+++ b/Project_Flight/DLL_DAL/DLL_DAL.csproj
@@ -56,11 +56,13 @@
     <Compile Include="Model\SanBayModel.cs" />
     <Compile Include="Model\TuyenBayModel.cs" />
     <Compile Include="Model\NhanVienModel.cs" />
+    <Compile Include="Model\VeChuyenBayModel.cs" />
     <Compile Include="NhanVienDLL_DAL.cs" />
     <Compile Include="PhieuDatVeDLL_DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SanBayDLL_DAL.cs" />
     <Compile Include="TuyenBayDLL_DAL.cs" />
+    <Compile Include="VeChuyenBayDLL_DAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
