--- a/Project_Flight/dental_sys/GUI.csproj
+++ b/Project_Flight/dental_sys/GUI.csproj
@@ -300,5 +300,9 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\location.png" />
+    <Content Include="Resources\note.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
